networkpolicy/allow-external-to-app.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-to-app
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: metrics-app
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
      - protocol: TCP
        port: 3000
  policyTypes:
    - Ingress
