networkpolicy/allow-nodejs.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-metrics-to-redis
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: metrics-app
      ports:
        - protocol: TCP
          port: 6379
  policyTypes:
    - Ingress
